tests/NormalTests/paczka2/big_fuzzy/61113640.err
Error in line 15: y92z A618 39,8
Error in line 18: y92z A283 27,1
Error in line 13: A263 A618 141,5
Error in line 24: A263 A263 28,7
Error in line 14: 7wlfkKi A263 88,7
Error in line 35: bs9m8nzb A299 97,5
Error in line 41: bs9m8nzb A283 33,2
Error in line 52: x11MPakrBSZ A618 33,2
Error in line 62: x11MPakrBSZ A299 44,1
Error in line 67: bs9m8nzb A263 78,4
Error in line 69: 3itqZE A263 21,2
Error in line 68: x11MPakrBSZ A263 18,6
Error in line 73: A263 A618 0,4
Error in line 91: y92z A618 77,5
Error in line 84: A263 A618 62,8
Error in line 93: y92z A299 81,1
Error in line 116: bs9m8nzb A263 66,5
Error in line 121: A263 A299 159,2
Error in line 131: rsADCkbP A299 23,8
Error in line 133: bs9m8nzb A263 78,0
Error in line 136: bs9m8nzb A299 39,7
Error in line 128: y92z A618 81,0
Error in line 146: 3itqZE A283 59,6
Error in line 154: 3itqZE A618 82,2
Error in line 158: 3itqZE A283 0,2
Error in line 157: 7wlfkKi A299 61,7
Error in line 162: 7wlfkKi A618 12,1
Error in line 161: 3itqZE A299 4,0
Error in line 160: x11MPakrBSZ A299 18,9
Error in line 186: bs9m8nzb A263 115,9
Error in line 192: A263 A283 9,1
Error in line 189: x11MPakrBSZ A263 44,6
Error in line 209: x11MPakrBSZ A283 84,45
Error in line 211: x11MPakrBSZ A283 383,6
Error in line 212: x11MPakrBSZ A618 37,2
Error in line 230: x11MPakrBSZ A618 44,7
